Fix alignment on follow buttons. Refs #256.

--- a/framebuzz/static/framebuzz/profiles/sass/screen.scss
+++ b/framebuzz/static/framebuzz/profiles/sass/screen.scss
@@ -23,7 +23,7 @@ body.profiles {
             font-size: 9px;
             line-height: 34px;
             text-align: left;
-            text-indent: 18px;
+            text-indent: 17px;
         }
 
         &.follow-button {
@@ -35,7 +35,7 @@ body.profiles {
 
         &.unfollow-button {
             i.fa-circle {
-                color: #D75452;
+                color: #999999;
                 font-size: 2.5em;
             }
         }
